# fastq-downloader

./: .gitignore  LICENSE  README.md  environment.yaml  poetry.toml  pyproject.toml
fastq_downloader/: __init__.py  __main__.py  main.py
fastq_downloader/helper/: accession_to_links.py  construct_gsm_dict.py  download_and_verify.py  merge_files.py  rename_files_by_run.py
fastq_downloader/snakemake/: Snakefile
fastq_downloader/tests/: test_ebi_api.py
test_acc/: GSM849929.tsv
