[tool.poetry]
name = "fastq-downloader"
version = "0.2.1"
description = ""
authors = ["tpob <tpob@tpob.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
httpx = "*"
beautifulsoup4 = "*"
click = "*"
lxml = "*"
snakemake = {version = "^6.10.0", optional = true}

[tool.poetry.dev-dependencies]
black = "*"
ipython = "*"
twine = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
